implemented crossfade animation to notification popups

--- a/.config/ags/style.css
+++ b/.config/ags/style.css
@@ -200,42 +200,43 @@
 .unset {
   all: unset; }
 
-window.notification-popups box.notifications {
-  padding: .5em; }
-
 .notify-icon {
   min-width: 68px;
   min-height: 68px;
   margin-right: 1em; }
 
 .notify-icon image {
-  font-size: 58px;
+  font-size: 72px;
   /* to center the icon */
-  margin: 5px;
-  color: #fbf1c7; }
+  margin: -16px;
+  margin-left: -2px; }
 
 .notify-icon box {
   min-width: 68px;
   min-height: 68px;
-  border-radius: 7px; }
+  border-radius: 0.25em; }
 
 .notification {
-  min-width: 400px;
+  min-width: 24em;
   border-radius: 11px;
-  padding: 1em;
-  margin: .5em;
+  padding: 1.25em;
+  margin: 0.5em;
   border: 1px solid #3c3836;
-  background-color: #3c3836; }
+  background-color: #3c3836;
+  opacity: 0.85;
+  border: 0.05em solid #665c54;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4); }
 
 .notification.critical {
   border: 1px solid lightcoral; }
 
 .title {
   color: #fbf1c7;
+  font-weight: bolder;
   font-size: 1.25em; }
 
 .body {
-  color: #fbf1c7; }
+  color: #A89984; }
 
 .actions .action-button {
   margin: 0 0.4em;
@@ -298,17 +299,22 @@ window.notification-popups box.notifications {
   margin: 1em 0em 0.5em 0em; }
 
 .player scale.position trough {
-  padding: 0.41em;
+  padding: 0.31em;
   border-radius: 1em;
-  min-height: 8px;
   background: #282828; }
 
 .player scale.position highlight {
   background-color: #fbf1c7;
-  padding: 0.3em; }
+  margin: 0.2em; }
 
 .player scale.position slider {
-  all: unset; }
+  box-shadow: none;
+  transition: none;
+  margin: -1px;
+  min-width: 12px;
+  min-height: 12px;
+  background: #fbf1c7;
+  background: transparent; }
 
 .player button {
   min-height: 1em;
