implemented smooth slider animation for speaker osd

--- a/.config/ags/style.scss
+++ b/.config/ags/style.scss
@@ -351,7 +351,7 @@ window.notification-popups box.notifications {
     min-height: 0.5em;
     padding: 1em;
     margin: 1em;
-    margin-bottom: 10em;
+    // margin-bottom: 10em;
     background: $base-color;
     border: 0.05em solid $gray;
     border-radius: 0.75em;
