initial implementation of control center

--- a/.config/ags/style.scss
+++ b/.config/ags/style.scss
@@ -6,6 +6,7 @@
 
 @import 'workspace';
 @import 'quick_controls';
+@import 'control_center';
 
 // component size definitions
 
@@ -382,3 +383,4 @@ window.notification-popups box.notifications {
 }
 
 @import 'launcher'
+
