--- a/.config/ags/style.css
+++ b/.config/ags/style.css
@@ -98,6 +98,14 @@
 .quick-control.hover\.is_muted.font, .quick-control.icon.hover\.is_muted {
   background: rgba(0, 0, 0, 0); }
 
+.control-center .container {
+  background: #3c3836;
+  padding: 1em;
+  margin: 0.5em;
+  border-radius: 0.75em;
+  border: 0.05em solid #665c54;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4); }
+
 /* user profile picture */
 * {
   font-family: JetBrainsMono NerdFont Mono; }
