--- a/.config/ags/_status_colors.scss
+++ b/.config/ags/_status_colors.scss
@@ -1,5 +1,11 @@
-.charging, .loading {
-    color: $blue
+.charging,
+.loading {
+    color: $blue;
+}
+
+.empty,
+.disabled {
+    color: $lighter-gray;
 }
 
 .good {
@@ -10,6 +16,7 @@
     color: $yellow;
 }
 
-.critical, .error{
+.critical,
+.error {
     color: $red;
 }
