--- a/.config/ags/style.scss
+++ b/.config/ags/style.scss
@@ -1,31 +1,26 @@
-
 @import 'gruvbox_dark';
+// @import 'everforest_dark';
 @import 'status_colors';
+@import 'css_states';
+@import 'widget_styles';
 
 @import 'circular_progress';
 
 @import 'workspace';
 @import 'quick_controls';
 @import 'control_center';
+@import 'launcher';
 
-// component size definitions
-
-/* user profile picture */
 $profile-picutre: url('./assets/frieren.png');
 
 * {
     font-family: JetBrainsMono NerdFont Mono;
 }
 
-.resizeable {
-    min-width: 0px;
-    min-height: 0px;
-}
 
 .bar-container {
     background: $base-color;
     padding: 0.25em;
-    opacity: 0.85;
 }
 
 .user {
@@ -44,6 +39,7 @@ $profile-picutre: url('./assets/frieren.png');
     background: $gray;
     border-radius: 1em;
 }
+
 .hour {
     color: $yellow;
     font-weight: bolder;
@@ -58,6 +54,7 @@ $profile-picutre: url('./assets/frieren.png');
     border-radius: 2em 0.75em 0.75em 2em;
     margin: 0.3em 0.2em;
 }
+
 .time-suffix {
     font-size: 11px;
     font-weight: bolder;
@@ -76,6 +73,7 @@ $profile-picutre: url('./assets/frieren.png');
     border-radius: 0.75em 2em 2em 0.75em;
     margin: 0.3rem 0.2rem;
 }
+
 .date-suffix {
     font-size: 11px;
     font-weight: bolder;
@@ -84,6 +82,7 @@ $profile-picutre: url('./assets/frieren.png');
     padding-right: 0.4rem;
     margin: 0.2rem;
 }
+
 .date {
     color: $green;
 }
@@ -93,6 +92,7 @@ $profile-picutre: url('./assets/frieren.png');
     padding: 0em 0.5em 0em 0.5em;
     border-radius: 0.75em;
 }
+
 .system-tray-item {
     color: #fff;
     background: $gray;
@@ -107,6 +107,7 @@ $profile-picutre: url('./assets/frieren.png');
     margin: 0.25em 0em;
     border-radius: 0.5em;
 }
+
 .tool-tray-item {
     color: $white;
     background: $gray;
@@ -121,9 +122,6 @@ $profile-picutre: url('./assets/frieren.png');
     border-radius: 0.75em;
 }
 
-.unset {
-    all: unset;
-}
 
 
 window.notification-popups box.notifications {
@@ -159,7 +157,6 @@ window.notification-popups box.notifications {
     margin: 0.5em;
     border: 1px solid $base-color;
     background-color: $base-color;
-    opacity: 0.85;
     border: 0.05em solid $gray;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
 }
@@ -181,6 +178,13 @@ window.notification-popups box.notifications {
 .actions .action-button {
     margin: 0 0.4em;
     margin-top: 0.8em;
+    background: $black;
+    color: $white;
+
+    &:hover {
+        background: $white;
+        color: $black;
+    }
 }
 
 .actions .action-button:first-child {
@@ -207,16 +211,15 @@ window.notification-popups box.notifications {
 
 .player {
     min-width: 25em;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
     background: $base-color;
     color: $white;
     border-radius: 0.75em;
     padding: 1.25em;
     margin: 0.5em;
-    opacity: 0.85;
     border: 0.05em solid $gray;
     // shape-rendering: crispEdges;
 }
+
 .player .img {
     border-radius: 0.25em;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);
@@ -241,7 +244,8 @@ window.notification-popups box.notifications {
     color: $light-gray;
 }
 
-.player .position, .player .length {
+.player .position,
+.player .length {
     color: $light-gray;
 }
 
@@ -296,7 +300,7 @@ window.notification-popups box.notifications {
 }
 
 .player-container {
-    background: rgba(0,0,0,0);
+    background: rgba(0, 0, 0, 0);
 }
 
 .toggle-media-player-icon {
@@ -306,6 +310,7 @@ window.notification-popups box.notifications {
     border: 1.5px solid $dark-gray;
     border-radius: 0.4rem;
 }
+
 .toggle-media-player {
     background: $base-color;
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.4);
@@ -318,6 +323,7 @@ window.notification-popups box.notifications {
     &:hover {
         opacity: 0.75;
     }
+
     &:active {
         opacity: 0.5;
         transition: background 0.1s;
@@ -343,20 +349,17 @@ window.notification-popups box.notifications {
 // }
 
 .speaker-osd-window {
-    background: rgba(0,0,0,0);
+    background: rgba(0, 0, 0, 0);
 }
 
 .speaker-osd-container {
-    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.4);
     min-width: 10em;
     min-height: 0.5em;
     padding: 1em;
     margin: 1em;
-    // margin-bottom: 10em;
     background: $base-color;
     border: 0.05em solid $gray;
     border-radius: 0.75em;
-    opacity: 0.85;
 }
 
 .speaker-osd-icon {
@@ -374,13 +377,59 @@ window.notification-popups box.notifications {
         background: $base-color-darker;
         border: 0.05em solid $dark-gray;
     }
+
     & slider {
         all: unset;
     }
+
     & highlight {
         background: $white;
     }
 }
 
-@import 'launcher'
+button.poweroff {
+    &:hover {
+        background: $red;
+    }
 
+    &:active {
+        background: $dark-red;
+        color: $gray;
+    }
+}
+
+button.reboot {
+    &:hover {
+        background: $yellow;
+    }
+
+    &:active {
+        background: $dark-yellow;
+        color: $gray;
+    }
+}
+
+button.logout {
+    &:hover {
+        background: $blue;
+    }
+
+    &:active {
+        background: $dark-blue;
+        color: $gray;
+    }
+}
+
+
+button.suspend {
+    color: $white;
+
+    &:hover {
+        background: $purple;
+    }
+
+    &:active {
+        background: $dark-purple;
+        color: $gray;
+    }
+}
