--- a/.config/ags/_everforest_dark.scss
+++ b/.config/ags/_everforest_dark.scss
@@ -1,12 +1,12 @@
 $base-color: #272E33;
-$base-color-darker: #272E33;
+$base-color-darker: #1E2326;
 $lighter-gray: #8D9890;
 $light-gray: #859289;
 
 $black: #1E2326;
 $white: #D3C6AA;
 
-$gray: #7A8478;
+$gray: #414B50;
 $red: #E67E80;
 $orange: #E69875;
 $yellow: #DBBC7F;
@@ -14,7 +14,7 @@ $green: #A7C080;
 $blue: #7FBBB3;
 $purple: #D699B6;
 
-$dark-gray: #5D6B66;
+$dark-gray: #374145;
 $dark-red: #F85552;
 $dark-orange: #F57D26;
 $dark-yellow: #DFA000;
