--- a/.config/ags/_launcher.scss
+++ b/.config/ags/_launcher.scss
@@ -60,7 +60,7 @@ $image: url('./assets/KanagawaWave.jpg');
 }
 
 .launcher-item.focused {
-    background: #928374;
+    background: $light-gray;
     color: $black;
     border: 0.2em solid $green;
     transition: all 0.25s ease;
