--- a/.config/ags/style.scss
+++ b/.config/ags/style.scss
@@ -23,6 +23,11 @@ $profile-picutre: url('./assets/frieren.png');
     padding: 0.25em;
 }
 
+.bar-container-1 {
+    background: rgba(39, 46, 51, 0.5);
+    padding: 0.25em;
+}
+
 .user {
     border-radius: 4em;
     background-image: $profile-picutre;
