--- a/.config/ags/style.scss
+++ b/.config/ags/style.scss
@@ -15,6 +15,8 @@ $profile-picutre: url('./assets/frieren.png');
 
 * {
     font-family: JetBrainsMono NerdFont Mono;
+    border: none;
+    box-shadow: none;
 }
 
 
